# Speech_synthesis

./: LICENSE  PROJECT_STATUS.md  README.md  config.yaml  examples.py  main.py  pyproject.toml  requirements.txt  setup.py  web_demo.py
notebooks/: demo.ipynb
src/: __init__.py  clone.py  data.py  evaluate.py  export.py  gradio_interface.py  infer.py  logging_config.py  model.py  preprocess.py  speaker_encoder.py  text_processor.py  train.py  tts_model.py  utils.py  vocoder.py
tests/: test_data.py  test_evaluate.py  test_export.py  test_integration.py  test_model.py  test_preprocess.py  test_system_integration.py  test_utils.py
