[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-synthesis"
version = "1.0.0"
description = "VITS2 Neural TTS + ECAPA-TDNN Voice Cloning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Speech Synthesis Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "phonemizer>=3.2.0",
    "unidecode>=1.3.0",
    "nltk>=3.8.0",
    "inflect>=6.0.0",
    "soundfile>=0.12.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "tensorboard>=2.13.0",
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
web = [
    "streamlit>=1.28.0",
    "gradio>=3.40.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
]
monitoring = [
    "wandb>=0.15.0",
    "tensorboard>=2.12.0",
]

[project.scripts]
speech-synthesis = "main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
